--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4013,7 +4013,7 @@ $module-card-lines-to-show: 3;
             left: 0;
             right: 0;
             bottom: 0;
-            z-index: 10;
+            // z-index: 10;
             box-shadow: inset 0 0 40px rgba(0,0,0,.2);
 
             a{
@@ -4023,7 +4023,6 @@ $module-card-lines-to-show: 3;
         .enroll_unit>a{
             cursor: pointer;
         }
-    }
     
         .lms_heading {
             color: #fff;
@@ -4047,13 +4046,14 @@ $module-card-lines-to-show: 3;
                 text-transform: none;
                 text-align: center;
                 cursor: pointer;
-
+                color: #000;
                 &>a{
                     color:#fff;
                 }
 
             }
         }
+    }
 }
 
 .lms_secondary_header{
