--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -16,23 +16,13 @@
 {% get_group_object groupid as group_object %}
 {% check_is_gstaff group_id request.user as is_gstaff %}
 {% comment %}{% get_breadcrumb request.path %}{% endcomment %}
-
-{% comment %}
-    
     <div class="row group_content {% if hide_bannerpic %} max-width {% endif %}">
         <div class="small-12 columns">
             <div class="row">
                 <div class="small-12 columns group_banner {% if hide_bannerpic %}hide {% endif %}"></div>
             </div>
-{% endcomment %}
-<div class="mydesk_page">
-    <div class="page_banner">
-        <div class="banner_overlay"></div>
-        {% comment %}
-            The validation function here is based on the usid. If authors then Unit name will be displayedwith settings option and if students login, then the profile icon will be displayed.
-        {% endcomment %}
-
-            <div class="small-12 columns group_header">
+            <div class="row">
+                <div class="small-12 columns group_header">
                     <div class="group_title left">{% firstof group_object.altnames group_object.name  %}</div>
                     <div class="right course_actions">
 
@@ -72,94 +62,98 @@
                         </ul>
                     </div>
                 </div>
-                
-    
-            {% comment %}
-            <div class="banner_profile">
-                <div class="buddy_logo">
-                    <svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="100px" height="100px" viewBox="0 0 100 100" version="1.1">
-                        <g transform="translate(-381.42857,-570.93361)">
-                            <path
-                                style="fill-opacity:1;stroke:none"
-                                d="m 481.42857,570.93361 0,100 -100,0 0,-100 100,0 z m -11.3125,22.125 c -3.41287,1.17055 -4.78125,3.875 -4.78125,3.875 -5.06064,0.7542 -6.125,-0.3125 -6.125,-0.3125 -2.04649,-3.22939 -5.71875,-3.5625 -5.71875,-3.5625 -1.08411,5.54932 1.40625,8.5 1.40625,8.5 -6.03007,4.63017 -21.03125,1.40625 -21.03125,1.40625 -7.0489,-1.52781 -15.25,0.65625 -15.25,0.65625 -14.86877,3.55047 -17.25678,17.12128 -29.09375,38.71875 24.63808,-3.53901 26.67086,-18.8067 26.84375,-21.1875 -0.19495,3.22498 0.8125,4.84375 0.8125,4.84375 3.23027,5.49022 0.96875,9.8125 0.96875,9.8125 -2.45931,5.56873 0.1875,10.125 0.1875,10.125 2.32699,1.21201 3.3125,-0.46875 3.3125,-0.46875 0,0 -4.03076,-2.79495 2.96875,-12.5625 2.75217,-3.8398 2.5,-8.28125 2.5,-8.28125 0.82036,4.63899 -2,8.4375 -2,8.4375 -5.11974,7.88073 -4.22862,10.80879 -3.5,11.75 1.98121,0.63688 2.125,-0.0625 2.125,-0.0625 -1.93887,-6.67577 5.0625,-13.78125 5.0625,-13.78125 4.52255,-3.44727 4.09375,-5.59375 4.09375,-5.59375 6.97569,4.48727 14.02267,2.89155 16.46875,2.125 0.34667,-3.69073 -2.875,-5.75 -2.875,-5.75 3.44638,1.8339 3.78125,5.4375 3.78125,5.4375 -0.7542,10.01542 6.46875,21.28125 6.46875,21.28125 3.27614,0.94826 3.78125,-0.96875 3.78125,-0.96875 -11.57322,-11.13658 0,-20.09375 0,-20.09375 19.2149,-10.26329 11.125,-26.40625 11.125,-26.40625 1.30022,-5.24059 -1.53125,-7.9375 -1.53125,-7.9375 z m -13.0625,12.78125 c 1.3779,0.12082 1.78125,1.65625 1.78125,1.65625 0,0 -2.20772,0.9666 -3.5,-1.1875 0.69995,-0.3771 1.25945,-0.50902 1.71875,-0.46875 z m 7.40625,0.4375 c 0.98242,-0.0355 1.71875,0.75 1.71875,0.75 0,0 -1.51715,1.87948 -3.65625,0.5625 0.67183,-0.98542 1.34805,-1.29118 1.9375,-1.3125 z m -4.96875,1.4375 c -0.0141,0.12349 -0.0127,0.22114 -0.0312,0.34375 -0.015,0.12526 -0.0387,0.25239 -0.0625,0.375 -0.0459,0.24523 -0.11517,0.50919 -0.1875,0.75 -0.14643,0.47898 -0.33315,0.92689 -0.5625,1.375 -0.22758,0.44899 -0.48839,0.90232 -0.78125,1.3125 -0.14555,0.20553 -0.30821,0.3988 -0.46875,0.59375 -0.0335,0.0406 -0.0593,0.0853 -0.0937,0.125 0.5469,-0.0811 1.30075,-0.0199 1.875,0.6875 0,0 -0.64651,1.1275 -1.3125,1.40625 0.0873,0.0873 0.17981,0.1759 0.28125,0.25 0.10497,0.0882 0.22643,0.17679 0.34375,0.25 l 0.15625,0.0937 0.1875,0.0937 c 0.1279,0.0538 0.27217,0.11567 0.40625,0.15625 0.13408,0.0441 0.26864,0.0646 0.40625,0.0937 0.27786,0.0609 0.55706,0.10648 0.84375,0.125 0.28668,0.0203 0.58567,0.0141 0.875,0 0.29109,-0.0132 0.58567,-0.0166 0.875,-0.0625 -0.55749,0.18789 -1.15458,0.26096 -1.75,0.28125 -0.29815,0.005 -0.60722,0.012 -0.90625,-0.0312 -0.14908,-0.0221 -0.29019,-0.0558 -0.4375,-0.0937 -0.1482,-0.0344 -0.29284,-0.0747 -0.4375,-0.125 l -0.21875,-0.0937 -0.1875,-0.0937 c -0.13408,-0.075 -0.28276,-0.15473 -0.40625,-0.25 -0.12879,-0.0891 -0.22908,-0.20753 -0.34375,-0.3125 l -0.1875,-0.1875 c -0.0503,-0.0582 -0.0765,-0.0954 -0.125,-0.15625 -0.0944,-0.12261 -0.17238,-0.27217 -0.25,-0.40625 -0.0723,-0.13849 -0.16494,-0.26158 -0.21875,-0.40625 -0.0238,-0.0538 -0.044,-0.13281 -0.0625,-0.1875 -0.0573,-0.14025 -0.1003,-0.28049 -0.125,-0.4375 -0.0203,-0.0917 -0.0422,-0.18863 -0.0625,-0.28125 l 0,-0.0937 0.0625,-0.0937 c 0.0811,-0.0785 0.16884,-0.16091 0.25,-0.25 0.0803,-0.0882 0.17061,-0.18863 0.25,-0.28125 0.1579,-0.18348 0.32144,-0.36844 0.46875,-0.5625 0.29374,-0.38724 0.56374,-0.79799 0.8125,-1.21875 0.12085,-0.21171 0.23437,-0.40712 0.34375,-0.625 0.11114,-0.21876 0.21811,-0.43043 0.3125,-0.65625 0.097,-0.22582 0.17149,-0.48587 0.25,-0.71875 0.0406,-0.11644 0.0915,-0.22555 0.125,-0.34375 0.0379,-0.1182 0.0611,-0.22378 0.0937,-0.34375 z m 1.90625,19.90625 c 0,0 -0.81446,0.63678 -1.78125,1.75 -0.59895,0.74185 -1.31737,1.77033 -2.15625,3.21875 -1.26494,2.57045 -1.91102,5.98227 -0.0312,9.875 1.71216,-10.45207 3.96875,-14.84375 3.96875,-14.84375 z m -8.4375,15.15625 c -0.59278,2.97446 -0.53125,4.96875 -0.53125,4.96875 2.76804,2.01826 3.21875,0.5625 3.21875,0.5625 -0.69598,-1.23848 -1.70484,-3.17515 -2.6875,-5.53125 z"/>
-                        </g>
-                    </svg>
-                </div>
-                    
-                <div class="banner_heading">
-                    <span class="buddy_name">Brown Fox</span>
-                    <span>Total Points</span>
-                    <br />
-                    <b>13</b>
-                </div>
-                {% endcomment %}
-                
             </div>
-   
-    <div class="page_menu">
-        <ul class="nav_menu_1 group_sections sticky">
-            <li class=""><a href="{% url 'course_about' group_id %}" {% if title == 'about' %}class="selected"{% endif %}>Overview</a></li>
-            <li class=""><a href="{% url 'unit_detail' group_id %}" {% if title == 'unit_authoring' %}class="selected"{% endif %}>Lessons</a></li>
-            <li class=""><a href="{% url 'course_pages' group_id %}" {% if title == 'course_pages' or title == 'create_course_pages' %}class="selected"{% endif %}>Activities</a></li>
-            <li class=""><a href="{% url 'asset_list' group_id %}" {% if title == 'asset_list' or title == 'asset_detail' or title == 'asset_content_detail'%}class="selected"{% endif %}>Assets</a></li>
-            <li class=""><a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>Notebook</a></li>
-        </ul>
+            <div class="row">
+                <div class="small-12 columns group_sections sticky">
+                    <nav data-topbar data-options="sticky_on: large" role="navigation">
+                        <ul class="title-area text-center horizontal_tabs_gstudio">
+                        <li>
+                            <a href="{% url 'course_about' group_id %}" {% if title == 'about' %}class="selected"{% endif %}>Overview</a>
+                        </li>
+                        <li >
+                            <a href="{% url 'unit_detail' group_id %}" {% if title == 'unit_authoring' %}class="selected"{% endif %}>Lessons</a>
+                        </li>
+                       <li>
+                            <a href="{% url 'course_pages' group_id %}" {% if title == 'course_pages' or title == 'create_course_pages' %}class="selected"{% endif %}>Activities</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'asset_list' group_id %}" {% if title == 'asset_list' or title == 'asset_detail' or title == 'asset_content_detail'%}class="selected"{% endif %}>Assets</a>
+                        </li>
+                        <li >
+                            <a href="https://clix-authoring.mit.edu/#/" target="_blank" {% if title == 'Assessments' %}class="selected"{% endif %}>Assessments</a>
+                        </li>
+                        <li >
+                            <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>Notebook</a>
+                        </li>
+                    </ul>
+                </nav>
+
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="small-12 columns group_sections_content">
+
+                    <div id="group_overview">
+                        {% if title == "about" %}
+                            {% include "ndf/course_about.html" %}
+                        {% endif %}
+                    </div>
+                    <div id="group_pages">
+                        {% if title == "course_pages" %}
+                            {% include "ndf/course_pages.html" %}
+                        {% elif title == "create_course_pages" %}
+                            {% include "ndf/course_page_create_edit.html" %}
+                        {% endif %}
+
+                    </div>
+                    <div id="group_elibrary">
+                        {% if title == "asset_list" %}
+                            {% include "ndf/assets.html" %}
+                        {% endif %}
+                        {% if title == "asset_detail" or title == "asset_content_detail" %}
+                            {% include "ndf/add_asset.html" %}
+                        {% endif %}
+                    </div>
+                    <div id="addAsset" class="reveal-modal reveal-modal-overlay" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+                        <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+                    </div>
+
+                    <div id="delete-unit" class="reveal-modal tiny text-center" data-reveal>
+                    <h3>Delete Unit: {% firstof group_object.altnames group_object.name  %} ?</h3>
+                        <br/>
+                        Are you sure want to delete this unit?
+                        <br/>
+                        <a href="#" class="button tiny success">Cancel</a>
+                        <a href="{% url 'delete_group_url_redirect' group_object.pk 'explore_basecourses' %}" class="button tiny alert">Yes</a>
+                        <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+                    </div>
+
+                    <div id="group_forum">
+
+                    </div>
+                    <div id="group_blog">
+                        {% if title == 'notebook' %}
+                            {% include "ndf/gnotebook.html" %}
+                        {% endif %}
+                    </div>
+                    <div id="group_calendar">
+
+                    </div>
+                    <div id="group_assessment">
+                    </div>
+                    <div id="unit_authoring_div">
+                        {% if title == 'unit_authoring' %}
+                            {% include "ndf/unit_structure.html" %}
+                        {% endif %}
+
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
     </div>
-            
-            
-    
-    <div class="small-12 columns group_sections_content">
-
-        <div id="group_overview">
-            {% if title == "about" %}
-                {% include "ndf/course_about.html" %}
-            {% endif %}
-        </div>
-        <div id="group_pages">
-            {% if title == "course_pages" %}
-                {% include "ndf/course_pages.html" %}
-            {% elif title == "create_course_pages" %}
-                {% include "ndf/course_page_create_edit.html" %}
-            {% endif %}
-        </div>
-        <div id="group_elibrary">
-            {% if title == "asset_list" %}
-                {% include "ndf/assets.html" %}
-            {% endif %}
-            {% if title == "asset_detail" or title == "asset_content_detail" %}
-                {% include "ndf/add_asset.html" %}
-            {% endif %}
-        </div>
-        <div id="addAsset" class="reveal-modal reveal-modal-overlay" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-            <a class="close-reveal-modal" aria-label="Close">&#215;</a>
-        </div>
-
-        <div id="delete-unit" class="reveal-modal tiny text-center" data-reveal>
-            <h3>Delete Unit: {% firstof group_object.altnames group_object.name  %} ?</h3><br/>
-            Are you sure want to delete this unit?<br/>
-            <a href="#" class="button tiny success">Cancel</a>
-            <a href="{% url 'delete_group_url_redirect' group_object.pk 'explore_basecourses' %}" class="button tiny alert">Yes</a>
-            <a class="close-reveal-modal" aria-label="Close">&#215;</a>
-        </div>
-
-        <div id="group_forum">
-        </div>
-        <div id="group_blog">
-            {% if title == 'notebook' %}
-                {% include "ndf/gnotebook.html" %}
-            {% endif %}
-        </div>
-        <div id="group_calendar"></div>
-        <div id="group_assessment"></div>
-        <div id="unit_authoring_div">
-            {% if title == 'unit_authoring' %}
-                {% include "ndf/unit_structure.html" %}
-            {% endif %}
-        </div>
-    </div>
-</div>
-
-        
 
     <div id="exportLessonModal" class="reveal-modal medium success radius" data-reveal data-alert>
         <div id="exportLessonModalLabel">Epub will be downloaded automatically.</div>
