new lms template added in announced unit

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -72,7 +72,8 @@
               </div>
               <div class="activity_page_rendered">
                 activity name : {{node.name}}
-                {{node.content|safe}}
+                {# {{node.content|safe}} #}
+                {% include "ndf/node_ajax_content.html" with node=node %}
               </div>
               <div id="info-page-area">
                 
