--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -9,21 +9,29 @@
 
 <div class="lms_page">
       <div class="lms_banner">
-        <div class="small-12 columns lms_heading">
-          <div class="left unit_name">Unit Name</div>
-          <div class="right enroll_unit"><a href="#">Enroll me</a></div>
-        </div>
+        {% include 'ndf/widget_photo_upload.html' with url_name='course_about' widget_for="group_banner" is_banner=True is_profile=False no_update_btn=False%}
       </div>
+      <span data-dropdown="course-settings-drop" aria-controls="course-settings-drop" aria-expanded="false" class="tiny radius right">
+                  <i class="fi-widget"></i>
+                </span>
+                <span data-reveal-id="group_banner_prof_pic_prop" id="group_banner_btnUploadProfilePic" class="right">
+                  <i class="fi-photo"></i>
+                  <span style="position: relative;top: -3px;left: 2px;">Change image</span>
+                </span>
 </div>
+
 <div class="lms_secondary_header">
+ 
   <ul class="nav_menu_1">
-    <li> Overview
-    {# <a href="{% url 'course_about' group_id %}" {% if title == 'about' %}class="selected"{% endif %}>Overview</a> #} 
+    <li>
+      <a href="{% url 'course_about' group_id %}" {% if title == 'about' %}class="selected"{% endif %}>Overview</a> 
     </li>
-    <li> Lessons </li>
+    <li>
+      <a href="{% url 'course_content' group_id %}" {% if title == 'course content' %}class="selected"{% endif %}>Lessons</a> 
+     </li>
     <li> Raw Material </li>
-    <li>Notebook
-    {# <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>Notebook</a> #}
+    <li>
+      <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>Notebook</a>
     </li>
     <li> Gallery </li>
   </ul>
@@ -41,6 +49,11 @@
     <div id="group_blog">
        {% if title == 'notebook' %}
           {% include "ndf/gnotebook.html" %}
+        {% endif %}
+    </div>
+    <div id="group_course_content">
+       {% if title == 'course content' %}
+          {% include "ndf/course_content.html" %}
         {% endif %}
     </div>
   </div>
