--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -58,7 +58,7 @@
                         </li>
 
 
-                        <li> <a class="" data-reveal-id="delete-unit"><i class="fa fa-trash"></i> Delete</a> </li>
+                        <li> <a data-reveal-id="delete-unit"><i class="fa fa-trash"></i> Delete</a> </li>
 
                         </ul>
                     </div>
