--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/activity_player.html
@@ -45,7 +45,7 @@
         <div class="course_editor ">
           <div class="small-2 columns">
             <div class="course_tree">
-              <div class="lesson-title">
+              <div class="lesson-title" title="{{lesson_node.name}}">
                   <b>{{lesson_node.name}}</b>
               </div>
               <div class="activity-title">
