--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -3495,7 +3495,8 @@ ul.nav_menu_1 {
 
 .course_editor_section{
     background:#fff;
-    height: 100vh;
+    min-height: 100vh;
+    margin-bottom:10px;
 }
 
 .lesson-title{
@@ -3533,7 +3534,8 @@ ul.nav_menu_1 {
 
 
 .activity_page_rendered{
-    margin-top:20px;
+    //margin-top:10px;
+    margin-left:40px;
 }
 /* Rating css */
 
